--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 08:34:00 PM</p>
+    <p class="lastupdate">09/08/2020 08:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">70.1&#176;F</td>
+        <td class="data">70.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">70.1&#176;F</td>
+        <td class="data">70.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">70.1&#176;F</td>
+        <td class="data">70.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.7&#176;F</td>
+        <td class="data">53.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">56%</td>
+        <td class="data">55%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.640 inHg (0.066)</td>
+        <td class="data">29.640 inHg (0.065)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph S (180&#176;)</td>
+        <td class="data">2 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.5&#176;F</td>
+        <td class="data">79.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="08:23:45 PM">
-            56</span><br/>
+          <span title="08:34:51 PM">
+            57</span><br/>
           <span title="01:21:46 PM">
             18</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="07:20:19 AM (Monday)">
-            56</span><br/>
+          <span title="08:34:51 PM (Tuesday)">
+            57</span><br/>
           <span title="04:59:20 PM (Sunday)">
             9</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 5 hours, 47 minutes</td>
+      <td class="data">7 days, 5 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 5 hours, 47 minutes</td>
+      <td class="data">7 days, 5 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
