--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 08:34:00 PM</p>
+    <p class="lastupdate">09/08/2020 08:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -180,13 +180,13 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">56<br/>
-            <span class="timestamp">08:23:45 PM</span><br/>
+          <td class="data new_row">57<br/>
+            <span class="timestamp">08:34:51 PM</span><br/>
             18<br/>
             <span class="timestamp">01:21:46 PM</span>
           </td>
-          <td class="data new_row">56<br/>
-            <span class="timestamp">07:20:19 AM (Monday)</span><br/>
+          <td class="data new_row">57<br/>
+            <span class="timestamp">08:34:51 PM (Tuesday)</span><br/>
             9<br/>
             <span class="timestamp">04:59:20 PM (Sunday)</span>
           </td>
