--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 08:49:00 PM</p>
+    <p class="lastupdate">09/08/2020 08:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">70.4&#176;F</td>
+        <td class="data">70.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">70.4&#176;F</td>
+        <td class="data">70.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">70.4&#176;F</td>
+        <td class="data">70.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -70,7 +70,7 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.649 inHg (0.070)</td>
+        <td class="data">29.654 inHg (0.075)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.2&#176;F</td>
+        <td class="data">79.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="12:02:01 AM">
-            29.650</span><br/>
+          <span title="08:51:03 PM">
+            29.654</span><br/>
           <span title="03:40:02 PM">
             29.560</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 6 hours, 2 minutes</td>
+      <td class="data">7 days, 6 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 6 hours, 2 minutes</td>
+      <td class="data">7 days, 6 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
