--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 09:39:00 PM</p>
+    <p class="lastupdate">09/08/2020 09:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">68.9&#176;F</td>
+        <td class="data">68.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">68.9&#176;F</td>
+        <td class="data">68.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">68.9&#176;F</td>
+        <td class="data">68.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.4&#176;F</td>
+        <td class="data">54.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.674 inHg (0.088)</td>
+        <td class="data">29.675 inHg (0.084)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.7&#176;F</td>
+        <td class="data">77.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">44%</td>
+        <td class="data">45%</td>
       </tr>
     </tbody>
   </table>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="09:35:03 PM">
-            29.675</span><br/>
+          <span title="09:42:03 PM">
+            29.676</span><br/>
           <span title="03:40:02 PM">
             29.560</span>
         </td>
@@ -444,7 +444,7 @@
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          350
+          349
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -505,14 +505,14 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="09:23:03 PM">
-            44</span><br/>
+          <span title="09:42:03 PM">
+            45</span><br/>
           <span title="12:07:01 AM">
             28</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:23:03 PM (Tuesday)">
-            44</span><br/>
+          <span title="09:42:03 PM (Tuesday)">
+            45</span><br/>
           <span title="12:07:01 AM (Tuesday)">
             28</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 6 hours, 52 minutes</td>
+      <td class="data">7 days, 6 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 6 hours, 52 minutes</td>
+      <td class="data">7 days, 6 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
