--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 10:19:00 PM</p>
+    <p class="lastupdate">09/08/2020 10:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">68.1&#176;F</td>
+        <td class="data">67.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">68.1&#176;F</td>
+        <td class="data">67.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">68.1&#176;F</td>
+        <td class="data">67.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">62%</td>
+        <td class="data">63%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.683 inHg (0.087)</td>
+        <td class="data">29.688 inHg (0.089)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.6&#176;F</td>
+        <td class="data">78.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="10:18:11 PM">
-            62</span><br/>
+          <span title="10:23:19 PM">
+            63</span><br/>
           <span title="01:21:46 PM">
             18</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:18:11 PM (Tuesday)">
-            62</span><br/>
+          <span title="10:23:19 PM (Tuesday)">
+            63</span><br/>
           <span title="04:59:20 PM (Sunday)">
             9</span>
         </td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="10:18:03 PM">
-            29.683</span><br/>
+          <span title="10:23:03 PM">
+            29.688</span><br/>
           <span title="03:40:02 PM">
             29.560</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 7 hours, 32 minutes</td>
+      <td class="data">7 days, 7 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 7 hours, 32 minutes</td>
+      <td class="data">7 days, 7 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
